--- a/app.css
+++ b/app.css
@@ -5,10 +5,19 @@
     font-family: 'Poppins',sans-serif;
 }
 
-.container{
+/* .container{
     width: 100%;
     min-height: 100vh;
     background: linear-gradient(135deg,#cf9aff,#95c0ff);
+    color: #fff;
+    padding-top: 4%;
+    padding-left: 10%;
+} */
+
+.container{
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(135deg,#5e5c60,#084196);
     color: #fff;
     padding-top: 4%;
     padding-left: 10%;
@@ -31,7 +40,7 @@
 .container button{
     display: flex;
     align-items: center;
-    background: linear-gradient(#9418fd,#571094);
+    background: linear-gradient(#170d8c,#000000);
     color: #fff;
     font-size: 16px;
     outline: 0;
