--- a/app.css
+++ b/app.css
@@ -29,6 +29,8 @@
     font-size: 35px;
     font-weight: 600;
 }
+
+
 .container h1 img{
     width: 50px;
 
@@ -54,14 +56,14 @@
 .input-box{
     position: relative;
     width: 100%;
-    max-width: 500px;
-    min-height: 150px;
+    max-width: 300px;
+    min-height: 250px;
     background: #fff;
     color: #333;
     padding: 20px;
     margin: 20px 0;
     outline: none;
-    border-radius: 5px;
+    border-radius: 9px;
 
 }
 
@@ -71,4 +73,47 @@
     bottom: 15px;
     right: 15px;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        padding: 0;
+        text-align: center;
+    }
+    
+    .container h1 {
+        
+        display: inline-block; 
+        padding: 20px 20px;
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    
+    .container button {
+        position: absolute;
+        bottom: 20px; 
+        left: 50%; 
+        transform: translateX(-50%); 
+    }
+
+    .input-box {
+        margin-left: 20%;
+        max-width: 250px;
+        min-height: 220px;
+    }
+
+    .container h1 img {
+        width: 40px; 
+    }
+
+    .container button img {
+        width: 25px;
+    }
+}
+
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+    .container {
+        padding-left: 5%;
+    }
 }
